fix(otp): update the year in the OTP template footer to be dynamic using {{currentYear}}.

--- a/src/mail/templates/otp.hbs
+++ b/src/mail/templates/otp.hbs
@@ -231,7 +231,7 @@
             <div class="footer-text">
                 <strong>Perfumery</strong><br>
                 Tu tienda de fragancias de confianza<br>
-                © 2024 Perfumery. Todos los derechos reservados.
+                © {{currentYear}} Perfumery. Todos los derechos reservados.
             </div>
         </div>
     </div>
